2007-03-02  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Corrected references to NetworkManager and
	network-manager-applet stable.
	Fixes bug #413556.

2007-03-02  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: gthumb refers now to trunk.

2007-03-01  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: Updated teams and people (fr, ku, mg).

2007-03-01  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Add references to 3 gnome-games manuals.
	* releases.xml.in: Branched gucharmap for gnome-2-16.

2007-03-01  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Add references to g-s-t shared folders and
	anjuta manuals.
	* releases.xml.in: Make epiphany-extensions appear in gnome-extras.

2007-03-01  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Removed old modules (red-carpet, rmm-utils,
	libgnomesu, notifier, update-manager, gnome-pim, battfink,
	gnome-menu-editor, netapplet, jamboree, slab).
	Fixes bug #405493.
	
2007-02-28  Djihed Afifi  <djihed@gmail.com>

	* gnome-modules.xml.in : mark gnome-2-18 packages string frozen.
	* releases.xml.in : mark gnome-2-18 string frozen.
	* translation-teams.xml.in : Add description for Arabic team.
	* templates/language-release.tmpl : Marked string for translation.
	* templates/list-languages.tmpl:
	* templates/list-modules.tmpl:
	* templates/list-releases.tmpl:
	* templates/list-teams.tmpl:
	* templates/module.tmpl:
	* templates/people.tmpl:
	* templates/person.tmpl:
	* templates/release.tmpl:
	* templates/show-stats.tmpl:
	* templates/team.tmpl: Add condition to include rtl styles. 

2007-02-25  Kjartan Maraas  <kmaraas@gnome.org>

	* translation-teams.xml.in: Remove obsolete norwegian entry.

2007-02-17  David Lodge <dave@cirt.net>

	* gnome-modules.xml.in: 
	* releases.xml.in: Removed printman as it is now archived

2007-02-07  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: