@@ -158,6 +158,10 @@
     <module id="giftoxic"/>
     <module id="gimmie"/>
     <module id="gimp"/>
+    <module id="gimp-freetype"/>
+    <module id="gimp-gap"/>
+    <module id="gimp-ruby"/>
+    <module id="gimp-tiny-fu"/>
     <module id="glade"/>
     <module id="glade3" branch="glade3-3-0-branch"/>
     <module id="glom"/>
