@@ -1,3 +1,9 @@
+2007-03-03  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Add some more gimp modules: gimp-freetype,
+	gimp-gap, gimp-ruby, gimp-tiny-fu.
+
 2007-03-02  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
